tests/sumo/extended/calibrator/errors/invalid_flow/errors.sumo.meso
Error: expected end of tag 'additional'
 In file 'input_additional.add.xml'
 At line/column 6/7.

Warning: No flow intervals in calibrator 'slow'.
Error: flow cannot be created
Quitting (on error).
